2012-03-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52754
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Only
	propagate arbitrary addresses into really plain dereferences.

2012-03-30  Richard Guenther <rguenther@suse.de>

	PR middle-end/52772
	* except.c (emit_to_new_bb_before): Move loop updating ...
	(dw2_build_landing_pads): ... here.  Use a proper block for
	querying the loop father.

2012-03-30  Tristan Gingold  <gingold@adacore.com>

	* config/ia64/ia64.c (ia64_section_type_flags): Remove
	common_object attribute handling.
	(SECTION_VMS_OVERLAY): Remove
	(ia64_vms_common_object_attribute): Replace abort with an assert.
	Do not set DECL_SECTION_NAME.
	(ia64_vms_output_aligned_decl_common): Handle common_object
	attribute.
	(ia64_vms_elf_asm_named_section): Remove.
	* config/ia64/vms.h (TARGET_ASM_NAMED_SECTION): Remove.

2012-03-30  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52786
	* double-int.c (rshift_double): Remove not needed cast.

2012-03-30  Richard Guenther  <rguenther@suse.de>

	* tree-affine.h (print_aff): Remove.
	* tree-affine.c (print_aff): Make static.
	* tree-data-ref.h (access_matrix_get_index_for_parameter): Remove.
	(get_references_in_stmt): Likewise.
	(print_direction_vector): Likewise.
	(print_dir_vectors): Likewise.
	(print_dist_vectors): Likewise.
	(dump_subscript): Likewise.
	(dump_ddrs): Likewise.
	(dump_dist_dir_vectors): Likewise.
	(dump_data_references): Likewise.
	(dump_data_dependence_relation): Likewise.
	(dump_data_dependence_direction): Likewise.
	(dump_rdg_vertex): Likewise.
	(dump_rdg_component): Likewise.
	(debug_ddrs): Declare.
	(struct data_ref_loc_d): Move ...
	* tree-data-ref.c (struct data_ref_loc_d): ... here.
	(get_references_in_stmt): Make static.
	(dump_data_references): Likewise.
	(dump_subscript): Likewise.
	(print_direction_vector): Likewise.
	(print_dir_vectors): Likewise.
	(print_dist_vectors): Likewise.
	(dump_data_dependence_relation): Likewise.